Update submodules for Visious

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "config/awesome/modules/UPower"]
 	path = config/awesome/modules/UPower
 	url = https://github.com/Aire-One/awesome-battery_widget
+[submodule "config/awesome/vicious"]
+	path = config/awesome/vicious
+	url = https://github.com/vicious-widgets/vicious.git
