--- a/configuration/picom.conf
+++ b/configuration/picom.conf
@@ -8,11 +8,8 @@ rounded-corners-exclude = [
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
-  "class_g = 'kitty'",
-  "class_g = 'Alacritty'",
-  "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  "class_g = 'firefox'",
+  # "class_g = 'Alacritty'",
+  # "class_g = 'firefox'",
   "class_g = 'Thunderbird'"
 ];
 round-borders = 1;
@@ -30,7 +27,7 @@ round-borders-exclude = [
 round-borders-rule = [
   "3:class_g      = 'XTerm'",
   "3:class_g      = 'URxvt'",
-  "10:class_g     = 'Alacritty'",
+  # "10:class_g     = 'Alacritty'",
   "15:class_g     = 'Signal'"
 ];
 
@@ -126,7 +123,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
